gcc/testsuite/rust/rustc/ui/enum-discriminant/arbitrary_enum_discriminant-no-repr_dg.rs
#![crate_type="lib"]

enum Enum {
// { dg-error ".E0732." "" { target *-*-* } .-1 }
  Unit = 1,
  Tuple() = 2,
  Struct{} = 3,
}

